--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: PopupAlerts
 main: PopupAlerts\Main
-version: "1.3"
+version: "1.7"
 api: [1.12.0]
 load: STARTUP
-author: EvolSoft
+author: Zeao
 description: Show alerts in popups
 website: http://www.evolsoft.tk
