--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: PopupAlerts
 main: PopupAlerts\Main
 version: "1.7"
-api: [1.12.0]
+api: [3.0.0-ALPHA6]
 load: STARTUP
 author: Zeao
 description: Show alerts in popups
