--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: PopupAlerts
 main: PopupAlerts\Main
-version: "1.3"
-api: [1.12.0]
+version: "1.4.1"
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 load: STARTUP
 author: EvolSoft
 description: Show alerts in popups
