--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: PopupAlerts
 main: PopupAlerts\Main
-version: "1.4.1"
+version: "1.4.1-1"
 api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10]
 load: STARTUP
 author: EvolSoft
